force-app/main/default/objects/Record_History__c/fields/Additional_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Field_2__c</fullName>
    <description>Used to identify the record when tracking insert, deletes, and undeletes</description>
    <label>Additional Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>