force-app/main/default/objects/Record_History__c/fields/Created_By_DL__c.field-meta.xml
<CustomField>
    <fullName>Created_By_DL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Record_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>