force-app/main/default/objects/Record_History__c/fields/Created_By_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Formula__c</fullName>
    <formula>IF(
NOT(ISBLANK(Created_By_DL__c)),
Created_By_DL__r.FirstName + &apos; &apos; + Created_By_DL__r.LastName, 
CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By(f)</label>
    <type>Text</type>
</CustomField>