force-app/main/default/objects/Record_History__c/fields/Created_Date_DL__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_DL__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>