force-app/main/default/objects/Record_History__c/fields/Created_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Formula__c</fullName>
    <formula>IF( NOT(ISNULL(Created_Date_DL__c)), 
Created_Date_DL__c, 
CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date(f)</label>
    <type>DateTime</type>
</CustomField>