force-app/main/default/objects/Record_History__c/fields/New_Value_Extended__c.field-meta.xml
<CustomField>
    <fullName>New_Value_Extended__c</fullName>
    <label>New Value Extended</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>