force-app/main/default/objects/Record_History__c/fields/Old_Value_Extended__c.field-meta.xml
<CustomField>
    <fullName>Old_Value_Extended__c</fullName>
    <label>Old Value Extended</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>