force-app/main/default/objects/Record_History__c/fields/Record__c.field-meta.xml
<CustomField>
    <fullName>Record__c</fullName>
    <description>Record that this history is related to</description>
    <label>Record</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>